--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "rhubarbphp/rhubarb": "*",
         "rhubarbphp/module-stem": "*",
         "rhubarbphp/module-leaf": "*",
-        "rhubarbphp/module-patterns": "*"
+        "rhubarbphp/module-patterns": "*",
+        "rhubarbphp/module-leaf-common-controls": "*"
     },
     "autoload":
     {
