Added database etc

--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,10 @@
         "rhubarbphp/module-patterns": "*",
         "rhubarbphp/module-leaf-common-controls": "*"
     },
+    "config":
+    {
+        "bin-dir": "bin/"
+    },
     "autoload":
     {
         "psr-4":
