--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "rhubarbphp/module-leaf-common-controls": "*",
         "rhubarbphp/module-leaf-crud": "^1.0",
         "rhubarbphp/module-leaf-html5upload": "dev-master",
-        "rhubarbphp/scaffold-authentication": "^1.0"
+        "rhubarbphp/scaffold-authentication": "^1.0",
+        "jamesanderson9182/rhubarb-leaf-twitter-timeline": "dev-master"
     },
     "config":
     {
