--- a/docker/httpd.conf
+++ b/docker/httpd.conf
@@ -203,7 +203,7 @@ DocumentRoot "/var/www/html"
 <VirtualHost *:80>
     DocumentRoot /var/www/html
 
-    SetEnv rhubarb_app "\Your\WebApp\YourApplication"
+    SetEnv rhubarb_app "\Your\WebApp\DockerApplication"
     Include "/var/www/html/vendor/rhubarbphp/rhubarb/platform/standard-development-apache-rewrites.conf"
 
 </VirtualHost>
